Change: minitoc changes
* Rewrite JS to work recursively on outline structure.
* Adjust CSS to make minitoc work for larger outlines that extend past
  the end of the page.  This means it scrolls with the page.  Maybe we
  should make a button to toggle it between absolute and fixed position.

--- a/export/styles/darksun/css/darksun.css
+++ b/export/styles/darksun/css/darksun.css
@@ -170,7 +170,7 @@ a:hover {
 }
 #minitoc {
     background-color: #073642 !important;
-    position: fixed;
+    position: absolute;
     top: 0px;
     right: -5px;
     padding: 0.5em;
@@ -180,7 +180,6 @@ a:hover {
     overflow: hidden;
 }
 #minitoc ul {
-    margin: 0.5em;
     padding-left: 1em;
 }
 #minitoc h2 {
